--- a/lab4/docker-compose.yml
+++ b/lab4/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: mixapaco/lab4:django-app
+    image: BogdanIsLaugh/lab4:django-app
     container_name: django-app
     networks: 
       - public
@@ -14,7 +14,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.site
-    image: mixapaco/lab4:django-monitor
+    image: BogdanIsLaugh/lab4:django-monitor
     container_name: django-monitor
     networks: 
       - public
