--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ os: ubuntu
 python:
         - "3.8"
 script:
-        - sudo make install test -C $PWD/Lab2/
+        - sudo make install tests -C $PWD/Lab2/
