Tokar Bogdan IT-23 Lr6

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ python:
         - "3.9"
 script:
         - sudo make install test -C $PWD/Lab2/
+        - cd Lab4/
+        - sudo docker-compose build
