--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ python:
         - "3.9"
 script:
         - sudo make install test -C $PWD/Lab2/
-        - cd Lab4/
+        - cd lab4/
         - sudo docker-compose build
